# Spaceship

./: .gitignore  CMakeLists.txt  README.md  basic.frag  basic.vert  build.sh  cube.frag  main.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  spaceship  spaceship.cpp  spaceship.h  texture.h
output/include/glad/: glad.h
output/src/: glad.c
